--- a/module/templates/research-tracker.hbs
+++ b/module/templates/research-tracker.hbs
@@ -1,10 +1,22 @@
 <section class="research-tracker">
   <header class="research-tracker__header">
     <h2>{{localize "PF2E.PointsTracker.Research.Title"}}</h2>
-    <button type="button" class="research-tracker__create" data-action="create-topic">
-      <i class="fas fa-plus"></i>
-      {{localize "PF2E.PointsTracker.Research.CreateTopic"}}
-    </button>
+    <div class="research-tracker__actions">
+      {{#if isGM}}
+        <button type="button" data-action="import-topics">
+          <i class="fas fa-file-import"></i>
+          {{localize "PF2E.PointsTracker.Research.Import"}}
+        </button>
+        <button type="button" data-action="export-topics">
+          <i class="fas fa-file-export"></i>
+          {{localize "PF2E.PointsTracker.Research.Export"}}
+        </button>
+      {{/if}}
+      <button type="button" class="research-tracker__create" data-action="create-topic">
+        <i class="fas fa-plus"></i>
+        {{localize "PF2E.PointsTracker.Research.CreateTopic"}}
+      </button>
+    </div>
   </header>
 
   {{#if topics.length}}
@@ -31,6 +43,77 @@
           </div>
           {{#if topic.summary}}
             <p class="research-topic__summary">{{topic.summary}}</p>
+          {{/if}}
+          {{#if topic.thresholds.length}}
+            <section class="research-topic__thresholds">
+              <header>
+                <h4>{{localize "PF2E.PointsTracker.Research.Thresholds"}}</h4>
+              </header>
+              <ul>
+                {{#each topic.thresholds as |threshold|}}
+                  <li
+                    class="research-threshold{{#if threshold.isUnlocked}} is-unlocked{{/if}}{{#if threshold.isRevealed}} is-revealed{{/if}}"
+                  >
+                    <div class="research-threshold__meta">
+                      <span class="research-threshold__points">
+                        {{localize "PF2E.PointsTracker.Research.ThresholdPoints" points=threshold.points}}
+                      </span>
+                      <span class="research-threshold__status">
+                        {{#if threshold.isRevealed}}
+                          {{localize "PF2E.PointsTracker.Research.ThresholdRevealed"}}
+                        {{else if threshold.isUnlocked}}
+                          {{localize "PF2E.PointsTracker.Research.ThresholdUnlocked"}}
+                        {{else}}
+                          {{localize "PF2E.PointsTracker.Research.ThresholdLocked"}}
+                        {{/if}}
+                      </span>
+                    </div>
+                    {{#if ../isGM}}
+                      {{#if threshold.playerText}}
+                        <div class="research-threshold__player-preview">
+                          <strong>{{localize "PF2E.PointsTracker.Research.PlayerText"}}</strong>
+                          {{{threshold.playerText}}}
+                        </div>
+                      {{/if}}
+                      {{#if threshold.gmText}}
+                        <div class="research-threshold__gm-text">
+                          <strong>{{localize "PF2E.PointsTracker.Research.GMText"}}</strong>
+                          {{{threshold.gmText}}}
+                        </div>
+                      {{/if}}
+                      <div class="research-threshold__controls">
+                        <button
+                          type="button"
+                          data-action="send-reveal"
+                          data-threshold-id="{{threshold.id}}"
+                          {{#unless threshold.isUnlocked}}disabled{{/unless}}
+                          {{#if threshold.isRevealed}}disabled{{/if}}
+                        >
+                          {{localize "PF2E.PointsTracker.Research.RevealSend"}}
+                        </button>
+                        {{#if threshold.isRevealed}}
+                          <button
+                            type="button"
+                            data-action="resend-reveal"
+                            data-threshold-id="{{threshold.id}}"
+                          >
+                            {{localize "PF2E.PointsTracker.Research.RevealResend"}}
+                          </button>
+                        {{/if}}
+                      </div>
+                    {{else}}
+                      {{#if threshold.isUnlocked}}
+                        {{#if threshold.playerText}}
+                          <div class="research-threshold__player-text">
+                            {{{threshold.playerText}}}
+                          </div>
+                        {{/if}}
+                      {{/if}}
+                    {{/if}}
+                  </li>
+                {{/each}}
+              </ul>
+            </section>
           {{/if}}
           <section class="research-topic__participants">
             <header>
