--- a/module/templates/research-tracker.hbs
+++ b/module/templates/research-tracker.hbs
@@ -37,7 +37,7 @@
                 {{/if}}
               </div>
             </div>
-            {{#if ../isGM}}
+            {{#if @root.isGM}}
               <div class="research-topic__controls">
                 <button type="button" data-action="add-points">
                   <i class="fas fa-plus"></i>
@@ -100,7 +100,7 @@
                 <span class="research-topic__locations-total">
                   {{localize "PF2E.PointsTracker.Research.LocationTotals" collected=topic.locationTotals.collected max=topic.locationTotals.displayMax}}
                 </span>
-                {{#if ../isGM}}
+                {{#if @root.isGM}}
                   <button type="button" data-action="create-location">
                     <i class="fas fa-map-marker-alt"></i>
                     {{localize "PF2E.PointsTracker.Research.AddLocation"}}
@@ -114,7 +114,7 @@
                   <tr>
                     <th scope="col">{{localize "PF2E.PointsTracker.Research.LocationNameHeader"}}</th>
                     <th scope="col">{{localize "PF2E.PointsTracker.Research.LocationProgressHeader"}}</th>
-                    {{#if ../isGM}}
+                    {{#if @root.isGM}}
                       <th scope="col" class="research-topic__location-actions-header">{{localize "PF2E.PointsTracker.Research.Actions"}}</th>
                     {{/if}}
                   </tr>
@@ -198,7 +198,7 @@
                           </button>
                         </div>
                       </td>
-                      {{#if ../isGM}}
+                      {{#if @root.isGM}}
                         <td class="research-location__actions">
                           <button type="button" data-action="add-points" data-location-id="{{location.id}}">
                             <i class="fas fa-plus"></i>
@@ -245,7 +245,7 @@
                         {{/if}}
                       </span>
                     </div>
-                    {{#if ../isGM}}
+                    {{#if @root.isGM}}
                       {{#if threshold.playerText}}
                         <div class="research-threshold__player-preview">
                           <strong>{{localize "PF2E.PointsTracker.Research.PlayerText"}}</strong>
